# hardware-verification

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: run_monte_carlo_report.py  run_validation.py
rtl/: dsp_block.v  fir_filter.v  moving_average.v
rtl/cocotb/: common.py  test_dsp_block.py  test_fir_filter.py  test_moving_average.py
src/hardware_verification/: __init__.py
src/hardware_verification/dut/: __init__.py  base.py  behavioral.py  rtl.py
src/hardware_verification/monte_carlo/: __init__.py  analysis.py  engine.py  export.py  variation.py
src/hardware_verification/reporting/: __init__.py  markdown.py  plots.py  terminal.py
src/hardware_verification/rtl_verification/: __init__.py  comparison.py
src/hardware_verification/validation/: __init__.py  results.py  specs.py  suite.py  test_cases.py
src/hardware_verification/virtual_bench/: __init__.py  bench.py  dmm.py  instruments.py
tests/: test_dut.py  test_monte_carlo.py  test_plots.py  test_reporting_and_rtl.py  test_rtl_dut.py  test_step_and_settling.py  test_terminal_reporting.py  test_validation.py  test_virtual_bench.py
