[project]
name = "hardware-verification"
version = "0.1.0"
description = "Automated validation framework for statistical hardware verification"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Matthew Cranny" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scope-sim @ git+https://github.com/mcranny/scope-sim.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
reporting = [
    "rich>=13.0",
]
rtl = [
    "cocotb>=1.9",
]
viz = [
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "src",
    "../scope_sim/src",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
